--- a/trunk/src/com/help/Help.html
+++ b/trunk/src/com/help/Help.html
@@ -1,8 +1,4 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
         <title></title>
@@ -11,7 +7,7 @@ and open the template in the editor.
     <body>
         <h1 align="center">Crepz Player Tutorial</h1>
         <p>O Crepz Player é um programa pra execução de arquivos de áudio, foi desenvolvido como trabalho final de Linguagem de Programação II na Unijui.</p>
-        <img src="img/splash.jpg" align="center" alt="" />
+        <img src="../img/capa.jpg" align="middle" alt="" />
         <hr/>
         <h2>A Tela Principal</h2>
         <p>A tela principal possui os botões para gerenciamento das musica em execução e botões para chamada das telas secundárias.</p>
@@ -22,7 +18,7 @@ and open the template in the editor.
             <li>F4 : Minimiza para A bandeja (Quando estiver na bandeja, você terá uma mini tela para mexer)</li>
 
         </ul>
-        <img src="img/principal.jpg" align="center" alt=""/>
+       <img src="img/principal.jpg" align="middle" alt=""/>
         <hr/>
         <h2>Biblioteca</h2>
         <p>Na Biblioteca o Usuário pode gerenciar suas musicas, através do autor, álbum. Para importação de novos arquivos, deve-se selecionar uma pasta com os componentes no rodapé da janela.</p>
@@ -33,7 +29,7 @@ and open the template in the editor.
             <li>Tecla P : Adiciona Musica selecionada Para a Playlist</li>
             <li>Tela T: Adiciona Todas Para a Playlist</li>
         </ul>
-        <img src="img/biblioteca.jpg" align="center" alt=""/>
+     <img src="img/biblioteca.jpg" align="middle" alt=""/>
         
         <hr/>
         <h2>Playlist</h2>
@@ -45,6 +41,6 @@ and open the template in the editor.
             <li>Tecla F5: Consultar Playlist</li>
             <li>Tecla F6: Delete</li>
         </ul>
-        <img src="img/playlist.jpg" align="center" alt=""/>
+        <img src="img/playlist.jpg" align="middle" alt=""/>
     </body>
 </html>
